🌎👹 Checkpoint ./index.html:33983566/1049

--- a/index.html
+++ b/index.html
@@ -310,6 +310,34 @@
               <p class="thebalad2">All formats ready</p>
             </article></a
           >
+          
+                    <a>
+            <article class="card1pink">
+              <img
+                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SAASDUO%200293835.svg?v=1682009416074"
+                class="ballad-icon"
+              />
+              <p class="thebalad">Features on demand</p>
+            </article></a
+          >
+          <a>
+            <article class="card1orange">
+              <img
+                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SAASDUO%200293834.svg?v=1682009415467"
+                class="ballad-icon"
+              />
+              <p class="thebalad2">Automations</p>
+            </article></a
+          >
+          <a>
+            <article class="card1pink">
+              <img
+                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SAASDUO%200293831.svg?v=1682009413456"
+                class="ballad-icon"
+              />
+              <p class="thebalad">Your branding only</p>
+            </article></a
+          >
         </main>
 
         <br /><br /><br />
