📍💷 Checkpoint ./.glitch-assets:33983566/3483 ./index.html:33983566/1728 ./style.css:33983566/480

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           <a>
             <article class="card1pink">
               <img
-                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SAASDUO%200293835.svg?v=1682009416074"
+                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/1-SaaSduo.svg?v=1682930744472"
                 class="ballad-icon"
               />
               <p class="thebalad">Features on demand</p>
@@ -268,7 +268,7 @@
           <a>
             <article class="card1orange">
               <img
-                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SAASDUO%200293834.svg?v=1682009415467"
+                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/2-SaaSduo.svg?v=1682930745061"
                 class="ballad-icon"
               />
               <p class="thebalad2">Automations</p>
@@ -277,7 +277,7 @@
           <a>
             <article class="card1pink">
               <img
-                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SAASDUO%200293831.svg?v=1682009413456"
+                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/3-SaaSduo.svg?v=1682930745625"
                 class="ballad-icon"
               />
               <p class="thebalad">Your branding only</p>
@@ -286,7 +286,7 @@
           <a>
             <article class="card1orange">
               <img
-                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SAASDUO%200293836.svg?v=1682009416560"
+                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/4-SaaSduo.svg?v=1682930746228"
                 class="ballad-icon"
               />
               <p class="thebalad2">Fabulous UX</p>
@@ -295,7 +295,7 @@
           <a>
             <article class="card1pink">
               <img
-                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SAASDUO%200293833.svg?v=1682009414920"
+                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/5-SaaSduo.svg?v=1682930746801"
                 class="ballad-icon"
               />
               <p class="thebalad">Pleasant UI</p>
@@ -304,7 +304,7 @@
           <a>
             <article class="card1orange">
               <img
-                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SAASDUO%200293832.svg?v=1682009414145"
+                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/6-SaaSduo.svg?v=1682930747296"
                 class="ballad-icon"
               />
               <p class="thebalad2">All formats ready</p>
@@ -314,7 +314,7 @@
                     <a>
             <article class="card1pink">
               <img
-                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SAASDUO%200293835.svg?v=1682009416074"
+                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/7-SaaSduo.svg?v=1682930747765"
                 class="ballad-icon"
               />
               <p class="thebalad">Features on demand</p>
@@ -323,7 +323,7 @@
           <a>
             <article class="card1orange">
               <img
-                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SAASDUO%200293834.svg?v=1682009415467"
+                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/8-SaaSduo.svg?v=1682930748318"
                 class="ballad-icon"
               />
               <p class="thebalad2">Automations</p>
@@ -332,7 +332,7 @@
           <a>
             <article class="card1pink">
               <img
-                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SAASDUO%200293831.svg?v=1682009413456"
+                src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/9-SaaSduo.svg?v=1682930748839"
                 class="ballad-icon"
               />
               <p class="thebalad">Your branding only</p>
