🚋💴 Checkpoint ./.glitch-assets:33983566/514 ./index.html:33983566/390 ./style.css:33983566/78

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                   <p class="moustache">Be part of +2M happy daily users</p></a>
                                     <img
                     class="avatar-arrow"
-                    src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SAASDUO%20SPOTLIGHT%20DOWN%20LED%2092222222292129111939393391723.svg?v=1682934976541"
+                    src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/SAASDUO%20SPOTLIGHT%20DOWN%20LED%209129111939393391723.svg?v=1682935205173"
                   />
                 </div>
                   </div>
@@ -310,7 +310,7 @@
                 src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/7-SaaSduo.svg?v=1682930747765"
                 class="ballad-icon"
               />
-              <p class="thebalad">Features on demand</p>
+              <p class="thebalad">Content creation</p>
             </article></a
           >
           <a>
@@ -319,7 +319,7 @@
                 src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/8-SaaSduo.svg?v=1682930748318"
                 class="ballad-icon"
               />
-              <p class="thebalad2">Automations</p>
+              <p class="thebalad2">Asset production</p>
             </article></a
           >
           <a>
@@ -328,7 +328,7 @@
                 src="https://cdn.glitch.global/9d75250c-7972-4ed1-930d-d52d6a129103/9-SaaSduo.svg?v=1682930748839"
                 class="ballad-icon"
               />
-              <p class="thebalad">Your branding only</p>
+              <p class="thebalad">Analysis and strategy</p>
             </article></a
           >
         </main>
