🦄🌯 Checkpoint ./index.html:33983566/186 ./style.css:33983566/14 ./.glitch-assets:33983566/526

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <head>
       <!-- 
     Always bet on yourself, you deserve your own full custom and on-demand SaaS. Duo with us ♥ !
-    Join us ! SaaSduo hire junior to senior Software Engineers in London and remote
-    Follow us o
+    Join us ! SaaSduo hire junior to senior Software Engineers
+    Twitter @saasduo
+    North Standard Infracom 13344127 Ltd
+    London, UK
   -->
       <meta name="google" content="notranslate" />
       <meta charset="utf-8" />
@@ -734,7 +736,7 @@
             <a href="/privacy" target="_blank"
               ><p class="catapulttxt">Privacy (Updated 08/2022)</p></a
             >
-            <a href="https://about.saoecom.com/" target="_blank"
+            <a href="/terms" target="_blank"
               ><p class="catapulttxt">
                 © 2023 North Standard Infracom Ltd 71-75 Shelton Street London
                 WC2H 9JQ
