👝🖐 Checkpoint ./style.css:33983566/4 ./fr/index.html:33983566/157

--- a/fr/index.html
+++ b/fr/index.html
@@ -138,7 +138,7 @@
               <div class="nvidia">
                 <div class="nvidia-ultra">
                   <p class="nvidia-star-text">
-                    INSCRIVEZ-VOUS POUR CRÉER VOTRE SAAS
+                    CRÉEZ UN NOUVEAU SAAS
                   </p>
 
                   <div class="nvidia-ultra-vab">
