⏲😄 Checkpoint ./style.css:33983566/7 ./index.html:33983566/92

--- a/index.html
+++ b/index.html
@@ -616,11 +616,11 @@
                 <li>
                   <div class="moduleitem">
                     <div class="moduleitemcol1">
-                      <p class="mod-about">Data migration</p>
+                      <p class="mod-about">Presentation website</p>
                     </div>
                     <div class="moduleitemcol2">
-                      <p class="mod-usage">Transfers</p>
-                      <p class="mod-price">£0.01 /usage</p>
+                      <p class="mod-usage">Marketing</p>
+                      <p class="mod-price">£0.04 /usage</p>
                     </div>
                     <div class="moduleitemcol3">
                       <a href="/login" target="_blank"
