🏊🏼👬 Checkpoint ./index.html:33983566/42

--- a/index.html
+++ b/index.html
@@ -600,11 +600,11 @@
                 <li>
                   <div class="moduleitem">
                     <div class="moduleitemcol1">
-                      <p class="mod-about">IA prediction</p>
+                      <p class="mod-about">IA logic and system</p>
                     </div>
                     <div class="moduleitemcol2">
                       <p class="mod-usage">Automations</p>
-                      <p class="mod-price">£0.07 /usage</p>
+                      <p class="mod-price">£0.04 /usage</p>
                     </div>
                     <div class="moduleitemcol3">
                       <a href="/login" target="_blank"
