--- a/fr/index.html
+++ b/fr/index.html
@@ -227,7 +227,7 @@
           <a href="/register" >
           <div class="geniebriefamber conflictram">
             <p class="serverfriendly">Comment</p>
-            <p class="serverfriendly2">Partagez votre brief, nous crééons de bout-en-bout</p>
+            <p class="serverfriendly2">Partagez votre brief, nous créons de bout-en-bout</p>
             <a href="/register" target="_blank"
               ><p class="serverfriendly2-link">Poursuivre</p></a
             >
@@ -377,13 +377,13 @@ Quelques exemples de SaaS déployés pour nos clients récemment
 
           <a><span class="tag tag-blue tag-lg confluenceresp">Logiciel CRM</span></a>
 
-          <a><span class="tag tag-purple tag-lg confluenceresp">Système d'usinage</span></a>
+          <a><span class="tag tag-purple tag-lg confluenceresp">Contrôle qualité</span></a>
 
           <a><span class="tag tag-green tag-lg">Centre de ressources</span></a>
 
           <a><span class="tag tag-blue tag-lg">App de réservation</span></a>
 
-          <a><span class="tag tag-purple tag-lg">Plateforme freelancers</span></a>
+          <a><span class="tag tag-purple tag-lg">Plateforme documentaire</span></a>
 
           <a><span class="tag tag-green tag-lg">Logiciel ERP</span></a>
         </div>
@@ -403,7 +403,7 @@ Quelques exemples de SaaS déployés pour nos clients récemment
         <div class="parentsearch-container">
           <div class="leftsearch-container">
             <p class="blue2">
-              Avec nos modules standardisés à empiler comme des briques, votre SaaS est déployé rapidemment
+              Avec nos modules standardisés à empiler comme des briques, votre SaaS personnalisé est déployé rapidement
             </p>
           </div>
           <div class="rightsearch-container">
